--- a/css/stylesheet-black.css
+++ b/css/stylesheet-black.css
@@ -2,9 +2,9 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,500,600,700,800);
 body{background:#f2f2f2;font-size:.80em;font-family:Helvetica Neue, Open Sans, sans-serif;margin:0px;padding:0px;color:#000000;}
 a:link, a:visited{text-decoration:underline;}
+img{margin: auto;}
 a:hover{text-decoration:underline;}
 p{margin-bottom:10px;line-height:1.6em; color:#000000;}
-img{float:left;display:inline;}
 h1, h2, h3, h4, h5, h6{font-size:1.5em;color:#000000;text-transform:none;font-weight:400;font-family:"Helvetica Neue Light","Open Sans", sans-serif;}
 h1{font-size:2.2em;font-weight:300;}
 h1 a{color:#f2f2f2;text-decoration:none;}
@@ -39,4 +39,8 @@ li.dropdown {display: inline-block;}
 .dropdown-content {display: none;position: absolute;background-color: #000000;min-width: 160px;box-shadow: 0px 8px 16px 0px #000000; border-bottom-left-radius :4px;border-bottom-right-radius :4px;}
 .dropdown-content a {color: #f2f2f2;padding: 12px 16px;text-decoration: none;display: block;text-align: left;}
 .dropdown:hover .dropdown-content {display: block;}
-@media screen and (max-width: 600px){ul li, ul line, li.dropdown, h1.headtext, h2.userinfo {float: none; display:block; text-align:center; padding:0px; width:100%}}
+@media screen and (max-width: 600px){
+    ul li, ul line, li.dropdown,li a{float: none; display:block; text-align:center; width:auto;}
+    h1.headtext, h2.userinfo{float: none; display:block; padding:0px 0px 0px 0px; text-align:center;}
+
+}
